# zot

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  msys2.yml
include/: zot.h
src/: zot.c
